--- a/package.json
+++ b/package.json
@@ -1,26 +1,50 @@
 {
-  "name": "fullstack-typescript-node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "name": "todolist-backend",
+  "version": "0.1.0",
+  "description": "Todolist Application Backend which holds the REST apis",
+  "main": "dist",
   "scripts": {
-    "build": "tsc",
-    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\""
+    "dev": "npm run docs && nodemon -w src --exec \"babel-node src --presets es2015,stage-0 && killall node\"",
+    "build": "npm run docs && babel src -s -D -d dist --presets es2015,stage-0",
+    "docs": "apidoc -i src/api -o docs/",
+    "start": "node dist",
+    "prestart": "npm run -s build",
+    "test": "eslint src"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "eslintConfig": {
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": 7,
+      "sourceType": "module"
+    },
+    "env": {
+      "node": true
+    },
+    "rules": {
+      "no-console": 0,
+      "no-unused-vars": 1
+    }
+  },
+  "author": "Akshat Bhargava <akshatbhargavadeepa@gmail.com>",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.20"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.13.3",
+    "compression": "^1.5.2",
+    "cors": "^2.7.1",
+    "express": "^4.13.3",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.2.4",
+    "mongoose-unique-validator": "^2.0.1",
+    "morgan": "^1.8.0",
+    "resource-router-middleware": "^0.6.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
-    "@types/mongoose": "^5.7.29",
-    "@types/node": "^14.0.14",
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^3.1.1",
+    "nodemon": "^1.9.2",
+    "apidoc": "^0.17.6"
   }
 }
