--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "name": "todo-api",
   "version": "1.0.0",
-  "description": "REST API designed in Node.js for a TODO application",
-  "main": "server.js",
+  "description": "",
+  "main": "testMongo.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/toslimarif/todo-api.git"
+  "engines": {
+    "node": "11.2.0"
   },
-  "keywords": [
-    "TODO",
-    "REST",
-    "API"
-  ],
-  "author": "Toslim Arif",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/toslimarif/todo-api/issues"
-  },
-  "homepage": "https://github.com/toslimarif/todo-api#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "moment-timezone": "^0.5.26",
-    "mongoose": "^5.6.8"
+    "bcryptjs": "^2.4.3",
+    "body-parse": "^0.1.0",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.4.0",
+    "validator": "^10.10.0"
+  },
+  "devDependencies": {
+    "expect": "^23.6.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.9",
+    "supertest": "^3.3.0"
   }
 }
