--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
-  "name": "todo-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "testMongo.js",
-  "scripts": {
-    "start": "node server/server.js",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec \"npm test\""
-  },
-  "engines": {
-    "node": "11.2.0"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parse": "^0.1.0",
-    "express": "^4.16.4",
-    "jsonwebtoken": "^8.4.0",
-    "lodash": "^4.17.11",
-    "mongodb": "^3.1.10",
-    "mongoose": "^5.4.0",
-    "validator": "^10.10.0"
-  },
-  "devDependencies": {
-    "expect": "^23.6.0",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.9",
-    "supertest": "^3.3.0"
-  }
+	"name": "kanban-app-backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"start": "node kanban-server/server.js",
+		"dev": "nodemon kanban-server/server.js",
+		"build": "NPM_CONFIG_PRODUCTION=false npm install --legacy-peer-deps --prefix kanban-app && npm run build --prefix kanban-app"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.0.1",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"helmet": "^5.1.0",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.4.4"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.19"
+	}
 }
