--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "task-manager",
-  "version": "1.0.0",
-  "description": "Manage all your tasks",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
-  },
-  "author": "elit-altum",
-  "license": "ISC",
-  "dependencies": {
-    "@sendgrid/mail": "^6.5.0",
-    "bcryptjs": "^2.4.3",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.4.1",
-    "mongoose": "^5.8.7",
-    "multer": "^1.4.2",
-    "sharp": "^0.24.0",
-    "validator": "^12.1.0"
-  },
-  "devDependencies": {
-    "env-cmd": "^10.0.1",
-    "nodemon": "^2.0.2"
-  }
+	"name": "task-manager-api",
+	"version": "1.0.0",
+	"description": "A task manager REST API application developed using Node.JS ",
+	"main": "src/server.js",
+	"scripts": {
+		"start": "node src/server.js",
+		"dev": "nodemon src/server.js",
+		"test": "jest --watch"
+	},
+	"keywords": [
+		"Node.JS",
+		"REST",
+		"API",
+		"Task",
+		"Manager"
+	],
+	"author": "Kater Akeren",
+	"license": "ISC",
+	"dependencies": {
+		"@sendgrid/mail": "^7.2.6",
+		"bcryptjs": "^2.4.3",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.10.5",
+		"multer": "^1.4.2",
+		"sharp": "^0.25.4",
+		"validator": "^13.1.1"
+	},
+	"devDependencies": {
+		"jest": "^26.4.2"
+	}
 }
