--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "task-manager",
+  "name": "kooper",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Open Source projects visualizer.",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "jest": {
-    "testEnvironment": "node"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OSWeekends/Kooper.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": {
+    "name": "Open Source Weekends",
+    "url": "http://osweekends.com"
+  },
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/OSWeekends/Kooper/issues"
+  },
+  "homepage": "https://github.com/OSWeekends/Kooper#readme",
   "dependencies": {
-    "@sendgrid/mail": "^6.5.4",
-    "bcryptjs": "^2.4.3",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.4",
-    "mongoose": "^5.9.3",
-    "multer": "^1.4.2",
-    "sharp": "^0.25.1",
-    "validator": "^13.7.0"
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
-    "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
-    "supertest": "^4.0.2",
-    "minimist": ">=1.2.2"
+    "browser-sync": "^2.18.8",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-imagemin": "^3.2.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.1.2",
+    "nodemon": "^1.11.0"
   }
 }
