--- a/package.json
+++ b/package.json
@@ -1,37 +1,20 @@
 {
-  "name": "kooper",
+  "name": "jobs",
   "version": "1.0.0",
-  "description": "Open Source projects visualizer.",
-  "main": "server.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/OSWeekends/Kooper.git"
-  },
-  "author": {
-    "name": "Open Source Weekends",
-    "url": "http://osweekends.com"
-  },
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/OSWeekends/Kooper/issues"
-  },
-  "homepage": "https://github.com/OSWeekends/Kooper#readme",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.10"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.8",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-imagemin": "^3.2.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^2.0.7"
   }
 }
