--- a/package.json
+++ b/package.json
@@ -5,29 +5,25 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "./node_modules/.bin/env-cmd -f ./config/dev.env nodemon src/index.js",
-    "staging": "./node_modules/.bin/env-cmd -f ./config/staging.env node src/index.js",
-    "prod": "./node_modules/.bin/env-cmd -f ./config/prod.env node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "build:css": "tailwind build src/style/style.css -o public/css/style.css"
   },
-  "keywords": [],
-  "author": "",
+  "author": "punitkmryh",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.3.2",
-    "mongoose": "^5.7.0",
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.19",
     "multer": "^1.4.2",
-    "sharp": "^0.23.0",
-    "validator": "^11.1.0"
+    "npm": "^6.14.6",
+    "sharp": "^0.25.4",
+    "tailwindcss": "^1.4.6",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.4"
   }
 }
