--- a/package.json
+++ b/package.json
@@ -6,24 +6,30 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "build:css": "tailwind build src/style/style.css -o public/css/style.css"
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
   },
-  "author": "punitkmryh",
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.9",
-    "mongoose": "^5.9.19",
-    "multer": "^1.4.2",
-    "npm": "^6.14.6",
-    "sharp": "^0.25.4",
-    "tailwindcss": "^1.4.6",
-    "validator": "^13.1.1"
+    "mongodb": "^4.1.0",
+    "mongoose": "^5.13.7",
+    "multer": "^1.4.3",
+    "sharp": "^0.29.1",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.4"
+    "jest": "27.2",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6"
   }
 }
