--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-manager",
+  "name": "task_manager",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,21 +15,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^6.3.1",
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.0",
-    "mongoose": "^5.13.7",
-    "multer": "^1.4.3",
-    "sharp": "^0.29.1",
-    "validator": "^13.6.0"
+    "mongodb": "^4.9.0",
+    "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.30.7",
+    "sib-api-v3-sdk": "^8.4.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "jest": "27.2",
-    "nodemon": "^2.0.12",
-    "supertest": "^6.1.6"
+    "jest": "^29.0.1",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   }
 }
