--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
   "name": "task-manager",
   "version": "1.0.0",
-  "description": "Manage all your tasks",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
   },
-  "author": "elit-altum",
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^6.5.0",
-    "bcryptjs": "^2.4.3",
+    "@sendgrid/mail": "^7.0.1",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.4.1",
-    "mongoose": "^5.8.7",
+    "mongoose": "^5.9.10",
     "multer": "^1.4.2",
-    "sharp": "^0.24.0",
-    "validator": "^12.1.0"
+    "sharp": "^0.25.2",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
-    "env-cmd": "^10.0.1",
-    "nodemon": "^2.0.2"
+    "env-cmd": "^10.1.0",
+    "jest": "^25.4.0",
+    "nodemon": "^2.0.3",
+    "supertest": "^4.0.2"
   }
 }
