--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
   "name": "task-manager",
   "version": "1.0.0",
-  "description": "",
+  "description": "Task Manager App based on Node.js & MongoDB",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js",
+    "test": "env-cmd ./config/test.env jest --watch --runInBand"
   },
   "jest": {
     "testEnvironment": "node"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Rahul Gupta",
+  "license": "MIT",
   "dependencies": {
-    "@sendgrid/mail": "^7.0.1",
-    "bcrypt": "^5.0.0",
+    "@sendgrid/mail": "^6.4.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10",
+    "mongodb": "^3.3.2",
+    "mongoose": "^5.7.3",
     "multer": "^1.4.2",
-    "sharp": "^0.25.2",
-    "validator": "^13.0.0"
+    "sharp": "^0.21.1",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
-    "jest": "^25.4.0",
-    "nodemon": "^2.0.3",
-    "supertest": "^4.0.2"
+    "env-cmd": "^8.0.2",
+    "jest": "^23.6.0",
+    "supertest": "^3.4.1"
   }
 }
