--- a/package.json
+++ b/package.json
@@ -1,43 +1,24 @@
 {
-  "name": "task-manager",
+  "name": "taskmanagementapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "start:dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "start:prod": "env-cmd -f ./config/prod.env node src/index.js",
-    "test": "env-cmd -f ./config/dev.env jest --watchAll --runInBand"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
-  "jest": {
-    "testEnvironment": "node"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^7.1.0",
-    "bcryptjs": "^2.4.3",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.5",
-    "mongoose": "^5.9.9",
-    "multer": "^1.4.2",
-    "sharp": "^0.25.2",
-    "validator": "^13.0.0"
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.7",
+    "express": "^4.15.4",
+    "moment": "^2.18.1",
+    "mongoose": "^4.11.6",
+    "morgan": "^1.8.2"
   },
   "devDependencies": {
-    "axios": ">=0.21.1",
-    "env-cmd": "^10.1.0",
-    "jest": "^26.0.1",
-    "mquery": ">=3.2.3",
-    "node-notifier": ">=8.0.1",
-    "nodemon": "^2.0.3",
-    "supertest": "^4.0.2",
-    "tar": ">=6.1.2",
-    "path-parse": ">=1.0.7",
-    "set-value": ">=4.0.1",
-    "axios": ">=0.21.2",
-    "mpath": ">=0.8.4"
+    "nodemon": "^1.11.0"
   }
 }
